[package]
name = "calculadora"
description = "Simple Calculator"
version = "0.1.0"
authors = ["alt-art <pedromendescraft@gmail.com>"]
repository = "https://github.com/altart/calculadora/"
edition = "2018"

license="GPL-3.0-or-later"
readme="README.md"

[dependencies]
glib = "0.10.3"
gtk = "0.9.1"
gdk = "0.13.2"
gio = "0.9.0"
meval = "0.2"

[package.metadata.deb]
maintainer = "Pedro Mendes <pedromendescraft@gmail.com>"
copyright = "2020, Pedro Mendes <pedromendescraft@gmail.com>"
license-file = ["LICENSE", "3"]
extended-description = "Simple calculator for simple uses"
section = "utility"
priority = "optional"
assets = [
    # Binary
    ["target/release/calculadora", "/usr/bin/", "111"],
    # .Desktop
    ["resources/calculadora.desktop", "/usr/share/applications/","644"],
    # Icon
    ["resources/calculadora.svg", "/usr/share/icons/hicolor/scalable/apps/","644"]
]

[[bin]]
name = "calculadora"
path = "src/main.rs"
